# RX5808-Div

./: .gitignore  .gitmodules  README.md
Firmware/: readme.txt
Firmware/CORE/: stm32f4xx_it.c  system_stm32f4xx.c
Firmware/ESP32/RX5808/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
Firmware/ESP32/RX5808/main/: CMakeLists.txt  main.c
Firmware/ESP32/RX5808/main/composite_video/: .gitignore  CMakeLists.txt  Kconfig  README.md  diag.c  idf_component.yml  lvgl_driver_video.c  video.c
Firmware/ESP32/RX5808/main/composite_video/include/: Philips_PM5544_320x240.h  Philips_PM5544_384x288.h  lvgl_driver_video.h  myconf.h  video.h
Firmware/ESP32/RX5808/main/driver/: I2C.c  MyI2C.c  MyI2C.h  SPI.c  SPI.h
Firmware/ESP32/RX5808/main/gui/lvgl/: lv_conf.h
Firmware/ESP32/RX5808/main/gui/lvgl/src/: lvgl.rar
Firmware/ESP32/RX5808/main/gui/lvgl/src/core/: lv_event.h
Firmware/ESP32/RX5808/main/gui/lvgl_app/: lvgl_stl.c  page_about.c  page_about.h  page_main.c  page_main.h  page_menu.c  page_scan.c  page_scan_calib.c  page_scan_chart.c  page_scan_table.c  page_setup.c  page_setup.h  page_start.c  page_start.h
Firmware/ESP32/RX5808/main/gui/lvgl_app/resources/: lock_img.c  lv_font_chinese_12.c  lv_font_chinese_16.c  menu_about_icon.c
Firmware/ESP32/RX5808/main/gui/lvgl_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c  lv_port_indev.h  lvgl_init.c  lvgl_init.h
Firmware/ESP32/RX5808/main/hardware/: 24cxx.c  24cxx.h  beep.c  beep.h  fan.c  fan.h  hwvers.h  lcd.c  lcd.h  rx5808.c  rx5808.h  rx5808_config.c  rx5808_config.h  system.c  system.h  ws2812.c  ws2812.h
Firmware/ESP32/RX5808/main/video/: Font.h  Graphics.cpp  Graphics.h  SimplePALOutput.cpp  SimplePALOutput.h  TriangleTree.h  bitmap.c  bitmap.h  capi_video.cpp  capi_video.h  video_out.h
Firmware/ESP32/RX5808/main/video/gfx/: font.h
Firmware/FWLIB/inc/: stm32f4xx_gpio.h  stm32f4xx_iwdg.h
Firmware/HARDWARE/inc/: 24cxx.h  beep.h  iwdg.h  key.h  rx5808.h  rx5808_config.h  soft_iic.h  systick_delay.h
Firmware/HARDWARE/src/: 24cxx.c  iwdg.c  lcd.c  rx5808.c  rx5808_config.c  system.c
Firmware/LVGL/GUI_Page/: lv_demo_benchmark.c  lvgl_stl.c  lvgl_stl.h  page_about.c  page_main.c  page_menu.c  page_menu.h  page_scan.c  page_scan_calib.c  page_scan_calib.h  page_scan_chart.c  page_scan_chart.h  page_scan_table.c  page_scan_table.h  page_setup.c  page_start.c  page_start.h
Firmware/LVGL/Resources/: lv_font_start.c  menu_rx_icon.c  menu_setup_icon.c
Firmware/LVGL/lvgl/: lv_conf.h
Firmware/LVGL/lvgl_driver/: lv_port_disp.h  lv_port_indev.c
Firmware/STM32/CORE/: core_cm4.h  startup_stm32f411xe.s
Firmware/STM32/FWLIB/src/: stm32f4xx_iwdg.c
Firmware/STM32/HARDWARE/inc/: include.h  lcd.h  rx5808.h  rx5808_config.h  stmf4flash.h  system.h  ws2812.h
Firmware/STM32/HARDWARE/src/: beep.c  key.c  rx5808.c  rx5808_config.c  soft_iic.c  stmf4flash.c  (+3 more)
Firmware/STM32/USER/: RX5808.uvprojx  main.c
Firmware/USER/: RX5808.uvguix.FangTao  RX5808.uvoptx  RX5808.uvprojx
Hardware/: README.md
Hardware/BUT/: BOM.xlsx  RX5808_BUT.PcbDoc  RX5808_BUT.PrjPcb  RX5808_BUT.SchDoc
Hardware/BUT/Project Outputs for RX5808_BUT/: RX5808_BUT-macro.APR_LIB  RX5808_BUT.DRR  RX5808_BUT.EXTREP  RX5808_BUT.GBL  RX5808_BUT.GBO  RX5808_BUT.GBP  RX5808_BUT.GBS  RX5808_BUT.GKO  RX5808_BUT.GM1  RX5808_BUT.GM13  RX5808_BUT.GM15  RX5808_BUT.GM5  RX5808_BUT.GM6  RX5808_BUT.GPB  RX5808_BUT.GPT  RX5808_BUT.GTL  RX5808_BUT.GTO  RX5808_BUT.GTP  RX5808_BUT.GTS  RX5808_BUT.LDP  RX5808_BUT.REP  RX5808_BUT.RUL  RX5808_BUT.TXT  RX5808_BUT.apr  Status Report.Txt
Hardware/TOP/ESP32/: BOM.xlsx  RX5808_TOP.PrjPcb  RX5808_TOP.SchDoc  硬件开源地址.txt
Hardware/TOP/ESP32_Model/: RX5808_TOP.PrjPcb  RX5808_TOP.SchDoc
Hardware/TOP/STM32/: BOM.xlsx  RX5808_TOP.PrjPcb  RX5808_TOP.PrjPcbStructure  RX5808_TOP.SchDoc
Model/: README.md
Model/Fatshark_Hdo/: FatShark5808.stl  FatShark5808_1504.stl
Model/Skyzone_04x/: Skyzone_04x.SLDPRT  Skyzone_04x.STL
Resources/: icon.psd  lock_img.psd  main.psd
Simulator/lv_sim_visual_studio/: LVGL.Simulator.sln
Simulator/lv_sim_visual_studio/LVGL.Simulator/: LVGL.Simulator.cpp  LVGL.Simulator.vcxproj  LVGL.Simulator.vcxproj.filters  lv_conf.h
Tools/: README.md  ！！！！下载必看！！！！.docx
(+81 files in other folders)
